(metric) Upgraded options handling

--- a/applications/metric/2d/all_mappings/fclaw_options.ini
+++ b/applications/metric/2d/all_mappings/fclaw_options.ini
@@ -1,5 +1,7 @@
-[Options]
+[user]
      example = 3
+
+[Options]
 
      mx = 32 		  # mx_leaf
      my = 32              # my_leaf
@@ -10,7 +12,7 @@
      minlevel = 0         # Minimum level
      maxlevel = 0         # Maximum levels of refinement
 
-     verbosity = 0        # verbose
+     verbosity = production        # verbose
      trapfpe = T          # Trap floating point exceptions
 
      meqn = 3             # meqn
@@ -18,7 +20,3 @@
      mbc = 2              # mbc
 
      manifold = T         # Manifold
-
-     # Get rid of all time stepping parameters - this example does not run 'amrrun'.
-     # ....
-     # regrid_interval = 1  # Regrid every 'regrid_interval' time steps.
