--- a/applications/advection/2d/swirl/fclaw_options.ini
+++ b/applications/advection/2d/swirl/fclaw_options.ini
@@ -1,38 +1,58 @@
+[user]
+     period = 4.0         # Periodicity of the flow field.
+
 [Options]
+
+# Grid dimensions
      mx = 8		  # mx_leaf
-     my = 8              # my_leaf
+     my = 8               # my_leaf
+     mbc = 2              # Number of ghost cells
 
-     serialout = T
-     subcycle = T         # subcycle in time ( = T or F).
-
+# Regridding information
      minlevel = 2         # Minimum level
      maxlevel = 6         # Maximum levels of refinement
      regrid_interval = 1  # Regrid every 'regrid_interval' time steps.
 
-     outstyle = 1         # OutputStyle = 1,2,3 (see below, e.g. [OutputStyle_1]
-     tfinal = 4.0         #
+# Time stepping
+     tfinal = 4.0         #  Final time
+
+     use_fixed_dt = F     # Take a fixed time step
+     initial_dt = 0.005   # Initial time step for 'minlevel'
+     max_cfl = 1.0        # maximum cfl
+     desired_cfl = 0.9    # desired cfl
+
+     outstyle = 1         # 1 : Output steps  = tfinal/nout;
+                          # 2 : not implemented;
+			  # 3 : Take nout steps;  save files every nstep steps.
 
      nout = 16            # Used for all three out styles;  has different meaning, though.
      nstep = 1            # Only used if outstyle is 3
 
-     use_fixed_dt = F     # Take a fixed time step
-     initial_dt = 0.005   # Initial time step for 'minlevel'
+     subcycle = T         # subcycle in time ( = T or F).
 
+# File and console IO
      verbosity = production        # verbose
+     serialout = T
+
+# Diagnostics and debugging
      trapfpe = T          # Trap floating point errors.
-
-     meqn = 1             # meqn
-
-     mbc = 2              # mbc
-     mthbc = 1 1 1 1      # mthbc(1) (left edge), etc.
-
-     max_cfl = 1.0        # maximum cfl
-     desired_cfl = 0.9    # desired cfl
-
-     manifold = F         # Manifold
-     mapped = F
-
+     mpi_debug = F        # Attach mpi processes in gdb
      check_conservation = F
+     run_diagnostics = F
+
+# Equations and boundary conditions
+     meqn = 1             # Number of equations
+     mthbc = 1 1 1 1      # mthbc (=left,right,bottom,top)
+
+# Mapping
+     manifold = F         # Manifold
+
+     # Domain dimensions - used only if manifold = F
+     ax = 0
+     bx = 1
+     ay = 0
+     by = 1
+
 
 [clawpack46]
      order  = 2 2         # normal and transverse order
