(swirl_mapped) Minor changes

--- a/applications/advection/2d/swirl_mapped/fclaw_options.ini
+++ b/applications/advection/2d/swirl_mapped/fclaw_options.ini
@@ -31,6 +31,7 @@
      verbosity = production        # verbose
 
      trapfpe = T          # Trap floating point exceptions
+     mpi_debug = F
 
 # Equations and boundary conditions
      meqn = 1             # meqn
