(test_parms) Upgrade options handling

--- a/applications/test_parms/example2.ini
+++ b/applications/test_parms/example2.ini
@@ -1,16 +1,11 @@
-[main]
+[user]
      example = 2
-     frames = 4 5
-     density = 1000.1 14.56
+     frames =   1      2       3      4       5
+     density =  1001.2 1004.51 999.34 998.34  997.61
 
 
 [Options]
      trapfpe = T
-     mpi_debug = T
+     mpi_debug = F
 
-[mapping]
-     mi = 13
-     mj = 10
-
-     scale = 1.5 2 1
-     shift = 2.5 3 0
+     nout = 5
