--- a/applications/test_parms/fclaw_options.ini
+++ b/applications/test_parms/fclaw_options.ini
@@ -1,6 +1,6 @@
 # To override these values, use either the command line, or a second file :
 #
-#     % test_parms --main:example=2 --trapfpe=T
+#     % test_parms --user:example=2 --trapfpe=T
 # or
 #     % test_parms -F example2.ini
 #
@@ -8,65 +8,13 @@
 #     % test_parms --inifile=example2.ini
 #
 
-[main]
+[user]
      example = 1
-     test_array = 1.2 -4.56 6.44 1e-10
 
 [Options]
     # [Options] is a default section;  parameters are not prefaced with section name.
 
-     trapfpe = F
-     mpi_debug = T
+    verbosity = info        # verbose
 
-     mx = 16		  # mx_leaf
-     my = 16               # my_leaf
-
-     minlevel = 0         # Minimum level
-     maxlevel = 2         # Maximum levels of refinement
-     regrid_interval = 1  # Regrid every 'regrid_interval' time steps.
-
-     outstyle = 1         # OutputStyle = 1,2,3 (see below, e.g. [OutputStyle_1]
-     tfinal = 4.0         #
-
-     nout = 2             # Used for all three out styles;  has different meaning, though.
-     nstep = 1            # Only used if outstyle is 3
-
-     use_fixed_dt = F     # Take a fixed time step
-     initial_dt = 0.005   # Initial time step for 'minlevel'
-
-     verbosity = 0        # verbose
-
-     meqn = 1             # meqn
-
-     mbc = 2              # mbc
-     mthbc = 1 1 1 1      # mthbc(1) (left edge), etc.
-
-     max_cfl = 1.0        # maximum cfl
-     desired_cfl = 0.9    # desired cfl
-
-     manifold = 0         # Manifold
-
-     subcycle = T         # subcycle in time ( = T or F).
-
-     check_conservation = F
-
-[mapping]
-    mi = 1       # Dimensions of the brick
-    mj = 5
-
-    phi = 45.1   # Angles for rotation in 3d : theta rotates about x; phi about z
-    theta = 6.2
-
-    scale = 1.0 1.0 1.0
-
-    shift = 0 0 0
-
-[clawpack46]
-    # Clawpack parameters
-     order  = 2 2         # normal and transverse order
-     mcapa = 0            # mcapa
-     maux = 2             # maux
-     src_term = 0         # src_term
-
-     mwaves = 1           # mwaves
-     mthlim = 4           # mthlim (is a vector in general, with 'mwaves' entries)
+    trapfpe = T
+    mpi_debug = F
