--- a/Makefile.apps
+++ b/Makefile.apps
@@ -10,9 +10,9 @@ include src/solvers/fclaw2d_clawpack4.6/Makefile.am
 # ----------------------------------
 
 # Simple examples that don't do anything
-# include applications/dummy/Makefile.am
+include applications/dummy/Makefile.am
 include applications/no_solver/Makefile.am
-# include applications/test_parms/Makefile.am
+include applications/test_parms/Makefile.am
 include applications/metric/2d/all_mappings/Makefile.am
 
 # Scalar advection examples
