(quadrants) Upgrade options handling

--- a/applications/euler/2d/quadrants/Makefile.am
+++ b/applications/euler/2d/quadrants/Makefile.am
@@ -11,6 +11,7 @@ applications_euler_2d_quadrants_quadrants_SOURCES = \
 	applications/euler/2d/quadrants/tag4refinement.f \
 	applications/euler/2d/quadrants/quadrants_output.f \
 	applications/euler/2d/quadrants/fclaw2d_map_nomap.c \
+	applications/euler/2d/quadrants/fclaw2d_map_identity.c \
 	applications/euler/2d/quadrants/fclaw2d_map_cart.c \
 	applications/euler/2d/quadrants/fclaw2d_map_fivepatch.c \
 	applications/euler/2d/quadrants/rpn2eu4.f \
@@ -20,10 +21,6 @@ applications_euler_2d_quadrants_quadrants_SOURCES = \
 
 applications_euler_2d_quadrants_quadrants_CPPFLAGS = \
         $(AM_CPPFLAGS) $(FCLAW_CLAWPACK46_CPPFLAGS)
-
-# applications_euler_2d_quadrants_quadrants_CPPFLAGS += -D TRAPFPE
-
-# applications_euler_2d_quadrants_quadrants_CPPFLAGS += -D MPI_DEBUG
 
 applications_euler_2d_quadrants_quadrants_LDADD = \
         $(FCLAW_CLAWPACK46_LDADD) $(LDADD)
