--- a/Makefile.apps
+++ b/Makefile.apps
@@ -25,8 +25,8 @@ include applications/advection/2d/filament/Makefile.am
 include applications/advection/2d/torus/Makefile.am
 
 # NCAR Transport problems
-# include applications/NCAR_transport/slotted_disk/Makefile.am
+include applications/NCAR_transport/slotted_disk/Makefile.am
 include applications/NCAR_transport/correlatedcb/Makefile.am
 
 # Euler example
-# include applications/euler/2d/quadrants/Makefile.am
+include applications/euler/2d/quadrants/Makefile.am
