(swirl_mapped) No brick allowed in identity mapping

--- a/applications/advection/2d/swirl_mapped/example1_identity.ini
+++ b/applications/advection/2d/swirl_mapped/example1_identity.ini
@@ -1,12 +1,13 @@
+# Identity mapping [0,1]x[0,1]
+
 [user]
     example = 1
 
 [Options]
+     manifold = T
+
      minlevel = 2
      maxlevel = 5
-
-     mi = 4
-     mj = 4
 
      scale = 1 1 1
      shift = 0 0 0
