(torus) Added a periodic 'nomap' option

--- a/applications/advection/2d/torus/fclaw_options.ini
+++ b/applications/advection/2d/torus/fclaw_options.ini
@@ -1,11 +1,8 @@
 # -----------------------------------------------------------
-# Options set for a particular example in main.
+# A periodic example that uses [ax,bx]x[ay,by]
 # -----------------------------------------------------------
 [user]
-# This is the default example (example 2 = torus)
-
-     example = 2          # 1 = cart; 2 = torus; 3 = lat-long; 4 = annulus
-     alpha = 0.4          # Ratio of outer radius to inner radius (torus)
+     example = 0          # A periodic
 
 # -----------------------------------------------------------
 # Basic ForestClaw options
@@ -18,25 +15,25 @@
      mbc = 2              # Number of ghost cells.
 
 # Regridding options
-     minlevel = 0         # Minimum level
-     maxlevel = 3         # Maximum levels of refinement
+     minlevel = 2         # Minimum level
+     maxlevel = 5         # Maximum levels of refinement
      regrid_interval = 1  # Regrid every 'regrid_interval' time steps.
 
 # Time stepping
+     tfinal = 4.0         #
+     initial_dt = 0.05    # Initial time step for 'minlevel'
+
+     use_fixed_dt = F     # Take a fixed time step
+     max_cfl = 1.0        # maximum cfl
+     desired_cfl = 0.9    # desired cfl
+
      outstyle = 1         # OutputStyle = 1,2,3 (see below, e.g. [OutputStyle_1]
      nout = 16            # Used for all three out styles;  has different meaning, though.
      nstep = 1            # Only used if outstyle is 3
 
      subcycle =  T        # subcycle in time ( = T or F).
 
-     tfinal = 4.0         #
-
-     use_fixed_dt = F     # Take a fixed time step
-     initial_dt = 0.05    # Initial time step for 'minlevel'
-     max_cfl = 1.0        # maximum cfl
-     desired_cfl = 0.9    # desired cfl
-
-# Equation info
+# Equation and boundary conditions
      meqn = 1             # meqn
      mthbc = 1 1 1 1      # mthbc(1) (left edge), etc.
 
@@ -52,19 +49,16 @@
      serialout = T
 
 # Mapping options
-     manifold = T         # Manifold
-
-     mi = 20       # Dimensions of the brick
-     mj = 8        # mj approx alpha*mi  (8 = 0.4*20)
+     manifold = F         # Manifold
 
      periodic_x = T
      periodic_y = T
 
-     scale = 1.0 1.0 1.0
-     shift = 0 0 0
-
-     theta = 0
-     phi = 0
+     # These dimensions only get used if manifold = F
+     ax = -1
+     bx = 2
+     ay = -1
+     by = 1
 
 # -----------------------------------------------------------
 # Package options
@@ -72,8 +66,8 @@
 [clawpack46]
      claw_verbosity = 0
      order  = 2 2         # normal and transverse order
-     mcapa = 1            # mcapa
-     maux = 3             # maux
+     mcapa = 0            # mcapa
+     maux = 3             # maux  (velocity stored in (2,3)
      src_term = 0         # src_term
 
      mwaves = 1           # mwaves
