--- a/applications/advection/2d/torus/example1_cart.ini
+++ b/applications/advection/2d/torus/example1_cart.ini
@@ -3,17 +3,16 @@
 
 [Options]
      minlevel = 0        # Minimum level
-     maxlevel = 3        # Maximum levels of refinement
+     maxlevel = 5        # Maximum levels of refinement
      regrid_interval = 1  # Regrid every 'regrid_interval' time steps.
 
-     outstyle = 1         # OutputStyle = 1,2,3 (see below, e.g. [OutputStyle_1]
-     tfinal = 16.0         #
+# Mapping
+     manifold = T
+     mi = 4       # Dimensions of the brick
+     mj = 4
 
-     nout = 16            # Used for all three out styles;  has different meaning, though.
-     nstep = 1            # Only used if outstyle is 3
+     periodic_x = T
+     periodic_y = T
 
-    mi = 5       # Dimensions of the brick
-    mj = 5
-
-     periodic_x = 1
-     periodic_y = 1
+[clawpack46]
+     mcapa = 1
