--- a/applications/advection/2d/torus/example2_torus.ini
+++ b/applications/advection/2d/torus/example2_torus.ini
@@ -1,20 +1,17 @@
 [user]
-     example = 2          # 1 = cart; 2 = torus; 3 = lat-long; 4 = annulus
+     example = 2          # 2 = torus
      alpha = 0.4          # Ratio of outer radius to inner radius (torus)
 
 [Options]
+
      minlevel = 0        # Minimum level
-     maxlevel = 3        # Maximum levels of refinement
+     maxlevel = 2        # Maximum levels of refinement
      regrid_interval = 1  # Regrid every 'regrid_interval' time steps.
 
-     outstyle = 1         # OutputStyle = 1,2,3 (see below, e.g. [OutputStyle_1]
-     tfinal = 4.0         #
+# Mapping
+     manifold = T         # Manifold
+     mi = 20       # Dimensions of the brick
+     mj = 8        # mj approx alpha*mi  (8 = 0.4*20)
 
-     nout = 16            # Used for all three out styles;  has different meaning, though.
-     nstep = 1            # Only used if outstyle is 3
-
-    mi = 20       # Dimensions of the brick
-    mj = 8        # mj approx alpha*mi  (8 = 0.4*20)
-
-    periodic_x = 1
-    periodic_y = 1
+[clawpack46]
+     mcapa = 1
