--- a/applications/advection/2d/torus/example3_latlong.ini
+++ b/applications/advection/2d/torus/example3_latlong.ini
@@ -4,18 +4,18 @@
      latitude = -50 50
 
 [Options]
+
      minlevel = 0         # Minimum level
      maxlevel = 3         # Maximum levels of refinement
      regrid_interval = 1  # Regrid every 'regrid_interval' time steps.
 
-     outstyle = 1         # OutputStyle = 1,2,3 (see below, e.g. [OutputStyle_1]
-     tfinal = 4.0         #
-
-     nout = 16            # Used for all three out styles;  has different meaning, though.
-     nstep = 1            # Only used if outstyle is 3
-
+# mapping
+    manifold = T
     mi = 18               # Dimensions of the brick
     mj = 5                # mj  = mi*(lat[1]-lat[0])/(long[1]-long[0])=(
 
-    periodic_x = 1
-    periodic_y = 0
+    periodic_x = T
+    periodic_y = F
+
+[clawpack46]
+    mcapa = 1
