--- a/applications/advection/2d/torus/example4_annulus.ini
+++ b/applications/advection/2d/torus/example4_annulus.ini
@@ -7,14 +7,13 @@
      maxlevel = 3        # Maximum levels of refinement
      regrid_interval = 1  # Regrid every 'regrid_interval' time steps.
 
-     outstyle = 1         # OutputStyle = 1,2,3 (see below, e.g. [OutputStyle_1]
-     tfinal = 4.0         #
+# Mapping
+     manifold = T
+     mi = 22       # Dimensions of the brick
+     mj = 3
 
-     nout = 16            # Used for all three out styles;  has different meaning, though.
-     nstep = 1            # Only used if outstyle is 3
+     periodic_x = T
+     periodic_y = F
 
-    mi = 22       # Dimensions of the brick
-    mj = 3
-
-    periodic_x = 1
-    periodic_y = 0
+[clawpack46]
+     mcapa = 1
