(filament) General update to examples; set default example = 0

--- a/applications/advection/2d/filament/example1_cart.ini
+++ b/applications/advection/2d/filament/example1_cart.ini
@@ -2,18 +2,18 @@
 	example = 1       # Cartesian grid  (brick + cart)
 
 [Options]
-     mx = 8
-     my = 8
-     minlevel = 1         # Minimum level
-     maxlevel = 4         # Maximum levels of refinement
+     mx = 16
+     my = 16
+     minlevel = 0         # Minimum level
+     maxlevel = 0         # Maximum levels of refinement
 
 # mapping options
-	manifold = 1
+     manifold = T
 
-	shift = 1 1 1     # shift to [0,2]x[0,2]
+     shift = 1 1 0     # shift to [0,2]x[0,2]
 
-	mi = 2            # Brick dimensions (used in Cartesian mapping)
-        mj = 2
+     mi = 2            # Brick dimensions (used in Cartesian mapping)
+     mj = 2
 
 [clawpack46]
-	mcapa = 1         # mcapa
+     mcapa = 1         # mcapa
