--- a/applications/advection/2d/filament/fclaw_options.ini
+++ b/applications/advection/2d/filament/fclaw_options.ini
@@ -1,6 +1,5 @@
 [user]
-     example = 3        # squared disk mapping
-     alpha = 0.5
+     example = 0        # no mapping
 
 [Options]
 # Grid dimensions
@@ -10,8 +9,8 @@
 
 
 # Regridding options
-     minlevel = 1         # Minimum level
-     maxlevel = 4         # Maximum levels of refinement
+     minlevel = 2         # Minimum level
+     maxlevel = 5         # Maximum levels of refinement
      regrid_interval = 1  # Regrid every 'regrid_interval' time steps.
 
 # Time stepping
@@ -44,22 +43,18 @@
      serialout = T
 
 # mapping functions
-     manifold = T         # Manifold
+     manifold = F         # Manifold
 
-     periodic_x = F
-     periodic_y = F
-
-     scale = 1.0 1.0 1.0
-     # Squared disk mapping has to be shifted from [-1,1]x[-1,1] to [0,2]x[0,2]
-     shift = 1 1 0
-
-     theta = 0
-     phi = 0
+     # Domain for single grid, non-mapped grid.
+     ax = 0
+     bx = 2
+     ay = 0
+     by = 2
 
 [clawpack46]
      order  = 2 2         # normal and transverse order
-     mcapa = 1            # mcapa
-     maux = 3             # maux
+     mcapa = 0            # mcapa
+     maux = 3             # maux  (store mcapa in 1, if we have it)
      src_term = 0         # src_term
 
      mwaves = 1           # mwaves
