(metric) Add clawpack library to check compile

--- a/applications/metric/2d/all_mappings/Makefile.am
+++ b/applications/metric/2d/all_mappings/Makefile.am
@@ -26,6 +26,7 @@ applications_metric_2d_all_mappings_metric_SOURCES = \
 applications_metric_2d_all_mappings_metric_CPPFLAGS = \
 	        $(AM_CPPFLAGS)
 
-# applications_metric_2d_all_mappings_metric_CPPFLAGS += -D MPI_DEBUG
-
-# applications_metric_2d_all_mappings_metric_LDADD = $(LDADD) $(FLIBS)
+# This isn't used;  it is just included here to make sure that we are not
+# relying on any clawpack features that are not available.
+applications_advection_2d_swirl_swirl_LDADD = \
+        $(FCLAW_CLAWPACK46_LDADD) $(LDADD)
