(swirl) Include bc2.f as compiler check

--- a/applications/advection/2d/swirl/Makefile.am
+++ b/applications/advection/2d/swirl/Makefile.am
@@ -11,6 +11,7 @@ applications_advection_2d_swirl_swirl_SOURCES = \
 	applications/advection/2d/swirl/fclaw2d_map_nomap.c \
 	applications/advection/2d/swirl/psi.f \
 	applications/advection/2d/swirl/user_4.6/tag4refinement.f \
+	applications/advection/2d/swirl/user_4.6/bc2.f \
 	applications/advection/2d/swirl/user_4.6/rpn2ad1.f \
 	applications/advection/2d/swirl/user_4.6/rpt2ad1.f \
 	applications/advection/2d/swirl/user_4.6/qinit.f \
