(applications) Add rpn2 and rpt2 to Clawpack vtable

--- a/applications/test_parms/Makefile.am
+++ b/applications/test_parms/Makefile.am
@@ -6,10 +6,7 @@
 bin_PROGRAMS += applications/test_parms/test_parms
 
 applications_test_parms_test_parms_SOURCES = \
-	applications/test_parms/test_parms.cpp \
-	applications/test_parms/user_4.6/rpn2noncons.f \
-	applications/test_parms/user_4.6/rpt2noncons.f \
-	applications/test_parms/setprob.f
+	applications/test_parms/test_parms.cpp
 
 applications_test_parms_test_parms_CPPFLAGS = \
        $(AM_CPPFLAGS) $(FCLAW_CLAWPACK46_CPPFLAGS)
