--- a/src/solvers/fc2d_clawpack4.6/Makefile.am
+++ b/src/solvers/fc2d_clawpack4.6/Makefile.am
@@ -1,31 +1,31 @@
 # -*- Makefile -*-
 libclawpack4_6_generated_headers =
 libclawpack4_6_installed_headers = \
-	src/solvers/fclaw2d_clawpack4.6/fc2d_clawpack46.H
+	src/solvers/fc2d_clawpack4.6/fc2d_clawpack46.H
 
-libclawpack4_6_internal_headers = src/solvers/fclaw2d_clawpack4.6/fortran_source/claw.i
+libclawpack4_6_internal_headers = src/solvers/fc2d_clawpack4.6/fortran_source/clawpack46_claw.i
 
 libclawpack4_6_compiled_sources = \
-	src/solvers/fclaw2d_clawpack4.6/fc2d_clawpack46.cpp \
-	src/solvers/fclaw2d_clawpack4.6/fc2d_clawpack46_options.c \
-	src/solvers/fclaw2d_clawpack4.6/fortran_source/limiter.f \
-	src/solvers/fclaw2d_clawpack4.6/fortran_source/block.f \
-	src/solvers/fclaw2d_clawpack4.6/fortran_source/corner_info.f \
-	src/solvers/fclaw2d_clawpack4.6/fortran_source/fort_clawpack46_bc2.f \
-	src/solvers/fclaw2d_clawpack4.6/fortran_source/flux2.f \
-	src/solvers/fclaw2d_clawpack4.6/fortran_source/step2.f \
-	src/solvers/fclaw2d_clawpack4.6/fortran_source/ClawPatch2.f
+	src/solvers/fc2d_clawpack4.6/fc2d_clawpack46.cpp \
+	src/solvers/fc2d_clawpack4.6/fc2d_clawpack46_options.c \
+	src/solvers/fc2d_clawpack4.6/fortran_source/clawpack46_limiter.f \
+	src/solvers/fc2d_clawpack4.6/fortran_source/clawpack46_block.f \
+	src/solvers/fc2d_clawpack4.6/fortran_source/clawpack46_corner_info.f \
+	src/solvers/fc2d_clawpack4.6/fortran_source/clawpack46_bc2.f \
+	src/solvers/fc2d_clawpack4.6/fortran_source/clawpack46_flux2.f \
+	src/solvers/fc2d_clawpack4.6/fortran_source/clawpack46_step2.f \
+	src/solvers/fc2d_clawpack4.6/fortran_source/ClawPatch2.f
 
-lib_LTLIBRARIES += src/solvers/fclaw2d_clawpack4.6/libclawpack4.6.la
+lib_LTLIBRARIES += src/solvers/fc2d_clawpack4.6/libclawpack4.6.la
 
-src_solvers_fclaw2d_clawpack4_6_libclawpack4_6_la_SOURCES = \
+src_solvers_fc2d_clawpack4_6_libclawpack4_6_la_SOURCES = \
   $(libclawpack4_6_internal_headers) \
   $(libclawpack4_6_compiled_sources)
 
-src_solvers_fclaw2d_clawpack4.6_libclawpack4.6_la_CPPFLAGS = \
+src_solvers_fc2d_clawpack4.6_libclawpack4.6_la_CPPFLAGS = \
   $(AM_CPPFLAGS) $(FCLAW_CPPFLAGS)
 
-FCLAW_CLAWPACK46_CPPFLAGS = -I@top_srcdir@/src/solvers/fclaw2d_clawpack4.6
-FCLAW_CLAWPACK46_LDADD = @top_builddir@/src/solvers/fclaw2d_clawpack4.6/libclawpack4.6.la
+FCLAW_CLAWPACK46_CPPFLAGS = -I@top_srcdir@/src/solvers/fc2d_clawpack4.6
+FCLAW_CLAWPACK46_LDADD = @top_builddir@/src/solvers/fc2d_clawpack4.6/libclawpack4.6.la
 
 include_HEADERS += $(libclawpack4_6_installed_headers)
