(swirl_mapped) Change default to ID mapping

--- a/applications/advection/2d/swirl_mapped/fclaw_options.ini
+++ b/applications/advection/2d/swirl_mapped/fclaw_options.ini
@@ -1,6 +1,5 @@
 [user]
-    example = 3   # Five patch square
-    alpha = 0.5
+    example = 1          # ID mapping in unit square [0,1],[0,1]
 
 [Options]
 
@@ -34,23 +33,14 @@
      mpi_debug = F
 
 # Equations and boundary conditions
-     meqn = 1             # meqn
+     meqn = 3             # meqn
      mthbc = 1 1 1 1      # mthbc(1) (left edge), etc.
 
      check_conservation = F
      serialout = T        # ascii output
 
-# Mapping and topology
+# Mapping and topology (id mapping in unit square)
      manifold = T         # Manifold
-
-     mi = 4
-     mj = 4
-
-     scale = 0.5 0.5 1
-     shift = 0.5 0.5 0
-
-     periodic_x = F
-     periodic_y = F
 
 [clawpack46]
      order  = 2 2         # normal and transverse order
