(quadrants) Add 3-wave Riemann solver.  Both can be included in compile

--- a/applications/euler/2d/quadrants/Makefile.am
+++ b/applications/euler/2d/quadrants/Makefile.am
@@ -14,6 +14,7 @@ applications_euler_2d_quadrants_quadrants_SOURCES = \
 	applications/euler/2d/quadrants/fclaw2d_map_identity.c \
 	applications/euler/2d/quadrants/fclaw2d_map_cart.c \
 	applications/euler/2d/quadrants/fclaw2d_map_fivepatch.c \
+	applications/euler/2d/quadrants/rpn2eu3.f \
 	applications/euler/2d/quadrants/rpn2eu4.f \
 	applications/euler/2d/quadrants/rpt2eu.f \
 	applications/euler/2d/quadrants/qinit.f \
