--- a/applications/euler/2d/quadrants/fclaw_options.ini
+++ b/applications/euler/2d/quadrants/fclaw_options.ini
@@ -56,5 +56,5 @@
      maux = 0             # maux
      src_term = 0         # src_term
 
-     mwaves = 4           # mwaves
-     mthlim = 4 4 4 4     # mthlim (is a vector in general, with 'mwaves' entries)
+     mwaves = 3           # mwaves
+     mthlim = 4 4 4     # mthlim (is a vector in general, with 'mwaves' entries)
