(interface) Add second acoustics example

--- a/Makefile.apps
+++ b/Makefile.apps
@@ -33,3 +33,4 @@ include applications/euler/2d/quadrants/Makefile.am
 
 # AMRClaw examples from clawpack4.x
 include applications/amrclaw/acoustics/2d/radial/Makefile.am
+include applications/amrclaw/acoustics/2d/interface/Makefile.am
