(dummy package) Add dummy package to test out multiple packages

--- a/Makefile.apps
+++ b/Makefile.apps
@@ -4,6 +4,7 @@
 # Solver libraries
 # ----------------------------------
 include src/solvers/fc2d_clawpack4.6/Makefile.am
+include src/solvers/fc2d_dummy/Makefile.am
 
 # ----------------------------------
 # Applications
