--- a/Makefile.apps
+++ b/Makefile.apps
@@ -19,7 +19,7 @@ include applications/test_parms/Makefile.am
 include applications/metric/2d/all_mappings/Makefile.am
 
 # Scalar advection on manifolds
-# include applications/advection/2d/swirl_mapped/Makefile.am
+include applications/advection/2d/swirl_mapped/Makefile.am
 include applications/advection/2d/swirl/Makefile.am
 # include applications/advection/2d/hemisphere/Makefile.am
 # include applications/advection/2d/filament/Makefile.am
