--- a/Makefile.apps
+++ b/Makefile.apps
@@ -28,19 +28,19 @@ include applications/advection/2d/torus/Makefile.am
 
 # NCAR Transport problems on the sphere
 include applications/NCAR_transport/slotted_disk/Makefile.am
-# include applications/NCAR_transport/correlatedcb/Makefile.am
+include applications/NCAR_transport/correlatedcb/Makefile.am
 
 # Euler example
-# include applications/euler/2d/quadrants/Makefile.am
+include applications/euler/2d/quadrants/Makefile.am
 
 # Mountain problem - SSE
-# include applications/Mountain/Makefile.am
+include applications/Mountain/Makefile.am
 
 # AMRClaw examples from clawpack4.x
-# include applications/amrclaw/acoustics/2d/radial/Makefile.am
-# include applications/amrclaw/acoustics/2d/interface/Makefile.am
-# include applications/amrclaw/burgers/2d/pwconst/Makefile.am
-# include applications/amrclaw/euler/2d/quadrants/Makefile.am
-# include applications/amrclaw/euler/2d/shockbubble/Makefile.am
-# include applications/amrclaw/shallow/2d/radialdam/Makefile.am
-# include applications/amrclaw/advection/2d/swirl/Makefile.am
+include applications/amrclaw/acoustics/2d/radial/Makefile.am
+include applications/amrclaw/acoustics/2d/interface/Makefile.am
+include applications/amrclaw/burgers/2d/pwconst/Makefile.am
+include applications/amrclaw/euler/2d/quadrants/Makefile.am
+include applications/amrclaw/euler/2d/shockbubble/Makefile.am
+include applications/amrclaw/shallow/2d/radialdam/Makefile.am
+include applications/amrclaw/advection/2d/swirl/Makefile.am
