(swirl_mapped) Cleaned up example"

--- a/applications/advection/2d/swirl_mapped/Makefile.am
+++ b/applications/advection/2d/swirl_mapped/Makefile.am
@@ -9,12 +9,12 @@ applications_advection_2d_swirl_mapped_swirl_SOURCES = \
 	applications/advection/2d/swirl_mapped/swirl_user.cpp \
 	applications/advection/2d/swirl_mapped/swirl.cpp \
 	applications/advection/2d/swirl_mapped/mapc2m.f \
-	applications/advection/2d/swirl_mapped/setaux_manifold.f \
 	applications/advection/2d/swirl_mapped/fclaw2d_map_cart.c \
 	applications/advection/2d/swirl_mapped/fclaw2d_map_identity.c \
 	applications/advection/2d/swirl_mapped/fclaw2d_map_fivepatch.c \
 	applications/advection/2d/swirl_mapped/setprob.f \
 	applications/advection/2d/swirl_mapped/psi.f \
+	applications/advection/2d/swirl_mapped/user_4.6/setaux_manifold.f \
 	applications/advection/2d/swirl_mapped/user_4.6/b4step2_manifold.f \
 	applications/advection/2d/swirl_mapped/user_4.6/qinit.f \
 	applications/advection/2d/swirl_mapped/user_4.6/tag4refinement.f \
