(burgers) Tested out latest output funtions here

--- a/Makefile.apps
+++ b/Makefile.apps
@@ -19,8 +19,8 @@ include src/solvers/fc2d_dummy/Makefile.am
 # include applications/metric/2d/all_mappings/Makefile.am
 
 # # Scalar advection on manifolds
-# include applications/advection/2d/swirl_mapped/Makefile.am
-# include applications/advection/2d/swirl/Makefile.am
+include applications/advection/2d/swirl_mapped/Makefile.am
+include applications/advection/2d/swirl/Makefile.am
 # include applications/advection/2d/hemisphere/Makefile.am
 # include applications/advection/2d/filament/Makefile.am
 # include applications/advection/2d/sphere/Makefile.am
