--- a/applications/advection/2d/sphere/fclaw_options.ini
+++ b/applications/advection/2d/sphere/fclaw_options.ini
@@ -10,6 +10,8 @@
      minlevel = 0         # Minimum level
      maxlevel = 4        # Maximum levels of refinement
      regrid_interval = 1  # Regrid every 'regrid_interval' time steps.
+     refine_threshold = 0.25
+     coarsen_threshold = 0.1
 
      outstyle = 1         # OutputStyle = 1,2,3 (see below, e.g. [OutputStyle_1]
      nout = 20            # Used for all three out styles;  has different meaning, though.
