(sphere) Updated file names to maintain consistency with new regrid/output re-org

--- a/applications/advection/2d/torus/fclaw_options.ini
+++ b/applications/advection/2d/torus/fclaw_options.ini
@@ -15,9 +15,11 @@
      mbc = 2              # Number of ghost cells.
 
 # Regridding options
-     minlevel = 2         # Minimum level
-     maxlevel = 5         # Maximum levels of refinement
-     regrid_interval = 1  # Regrid every 'regrid_interval' time steps.
+     minlevel = 2               # Minimum level
+     maxlevel = 5               # Maximum levels of refinement
+     regrid_interval = 1        # Regrid every 'regrid_interval' time steps.
+     refine_threshold = 0.25
+     coarsen_threshold = 0.01
 
 # Time stepping
      tfinal = 4.0         #
