--- a/applications/advection/2d/sphere/Makefile.am
+++ b/applications/advection/2d/sphere/Makefile.am
@@ -9,13 +9,11 @@ applications_advection_2d_sphere_sphere_SOURCES = \
 	applications/advection/2d/sphere/fclaw2d_map_pillowsphere.c \
 	applications/advection/2d/sphere/velocity_wind.f \
 	applications/advection/2d/sphere/setprob.f \
-	applications/advection/2d/sphere/user_4.6/tag4refinement.f \
+	applications/advection/2d/sphere/user_4.6/qinit.f \
 	applications/advection/2d/sphere/user_4.6/rpn2noncons.f \
 	applications/advection/2d/sphere/user_4.6/rpt2noncons.f \
-	applications/advection/2d/sphere/user_4.6/qinit_manifold.f \
 	applications/advection/2d/sphere/user_4.6/b4step2_manifold.f \
-	applications/advection/2d/sphere/user_4.6/setaux_manifold.f \
-	applications/advection/2d/sphere/user_4.6/sphere_output.f
+	applications/advection/2d/sphere/user_4.6/setaux_manifold.f
 
 applications_advection_2d_sphere_sphere_CPPFLAGS = \
         $(AM_CPPFLAGS) $(FCLAW_CLAWPACK46_CPPFLAGS)
