(swirl_mapped) Update to maintain consistency with new re-org

--- a/applications/advection/2d/swirl_mapped/example3_fivepatch.ini
+++ b/applications/advection/2d/swirl_mapped/example3_fivepatch.ini
@@ -4,3 +4,9 @@
 
 [Options]
 # Nothing to overwrite - options are the same as fclaw_options.ini
+
+  minlevel = 0
+  maxlevel = 3
+
+  scale = 0.5 0.5 1
+  shift = 0.5 0.5 0
