--- a/applications/advection/2d/swirl_mapped/fclaw_options.ini
+++ b/applications/advection/2d/swirl_mapped/fclaw_options.ini
@@ -12,6 +12,8 @@
      minlevel = 1         # Minimum level
      maxlevel = 4         # Maximum levels of refinement
      regrid_interval = 1  # Regrid every 'regrid_interval' time steps.
+     refine_threshold = 0.25
+     coarsen_threshold = 0.05
 
 # Time stepping
      tfinal = 4.0         #
