--- a/applications/amrclaw/burgers/2d/pwconst/fclaw_options.ini
+++ b/applications/amrclaw/burgers/2d/pwconst/fclaw_options.ini
@@ -9,6 +9,8 @@
      minlevel = 2               # Minimum level
      maxlevel = 6               # Maximum levels of refinement
      regrid_interval = 1        # Regrid every 'regrid_interval' time steps.
+     refine_theshold = 0.25
+     coarsen_threshold = 0.05
 
 # Time stepping
      tfinal = 1.0
