--- a/applications/no_solver/fclaw_options.ini
+++ b/applications/no_solver/fclaw_options.ini
@@ -11,6 +11,8 @@
      minlevel = 2         # Minimum level
      maxlevel = 6         # Maximum levels of refinement
      regrid_interval = 1  # Regrid every 'regrid_interval' time steps.
+     refine_threshold = 0.25
+     coarsen_threshold = 0.05
 
 # Time stepping
      tfinal = 4.0         #
