(interface) Updated example

--- a/applications/amrclaw/acoustics/2d/interface/fclaw_options.ini
+++ b/applications/amrclaw/acoustics/2d/interface/fclaw_options.ini
@@ -7,14 +7,16 @@
 [Options]
 
 # Grids
-     mx = 8
-     my = 8
+     mx = 16
+     my = 16
      mbc = 2
 
 # Regridding information
      minlevel = 2               # Minimum level
-     maxlevel = 6               # Maximum levels of refinement
+     maxlevel = 5               # Maximum levels of refinement
      regrid_interval = 1        # Regrid every 'regrid_interval' time steps.
+     refine_threshold = 0.05
+     coarsen_threshold = 1e-4
 
 # Time stepping
      tfinal = 1.0
