--- a/applications/amrclaw/advection/2d/swirl/fclaw_options.ini
+++ b/applications/amrclaw/advection/2d/swirl/fclaw_options.ini
@@ -1,5 +1,5 @@
 [user]
-     period = 4.0         # Periodicity of the flow field.
+     tperiod = 8.0         # Periodicity of the flow field.
 
 [Options]
 
@@ -12,6 +12,8 @@
      minlevel = 2         # Minimum level
      maxlevel = 5         # Maximum levels of refinement
      regrid_interval = 1  # Regrid every 'regrid_interval' time steps.
+     refine_threshold = 0.25
+     coarsen_threshold = 0.025
 
 # Time stepping
      tfinal = 4.0         #  Final time
