--- a/applications/amrclaw/euler/2d/quadrants/fclaw_options.ini
+++ b/applications/amrclaw/euler/2d/quadrants/fclaw_options.ini
@@ -1,5 +1,5 @@
 [user]
-    example = 0   # Five patch square
+     gamma = 1.4
 
 [Options]
 
@@ -12,6 +12,8 @@
      minlevel = 1               # Minimum level
      maxlevel = 4               # Maximum levels of refinement
      regrid_interval = 1        # Regrid every 'regrid_interval' time steps.
+     refine_threshold = 0.5
+     coarsen_threshold = 0.1
 
 # Time stepping
      tfinal = 0.8
