--- a/applications/amrclaw/euler/2d/shockbubble/fclaw_options.ini
+++ b/applications/amrclaw/euler/2d/shockbubble/fclaw_options.ini
@@ -1,3 +1,11 @@
+[user]
+	gamma = 1.4
+	x0 = 0.5
+	y0 = 0.0
+	r0 = 0.2
+	rhoin = 0.1
+	pinf = 5.0
+
 [Options]
 
 # Grids
@@ -9,10 +17,12 @@
      minlevel = 0               # Minimum level
      maxlevel = 5               # Maximum levels of refinement
      regrid_interval = 1        # Regrid every 'regrid_interval' time steps.
+     refine_threshold = 0.25
+     coarsen_threshold = 0.15
 
 # Time stepping
      tfinal = 1.5
-     initial_dt = 0.005          # Initial time step for 'minlevel'
+     initial_dt = 1.5e-3          # Initial time step for 'minlevel'
 
      use_fixed_dt = F            # Take a fixed time step
      max_cfl = 1.0
@@ -37,7 +47,7 @@
 
 # Equations and boundary conditions
      meqn = 5             # meqn
-     mthbc = 1 1 3 1      # mthbc(1) (left edge), etc.
+     mthbc = 0 1 3 1      # mthbc(1) (left edge), etc.
 
 # Mapping and topology
      manifold = T         # Manifold
