--- a/Makefile.apps
+++ b/Makefile.apps
@@ -42,5 +42,5 @@ include applications/amrclaw/acoustics/2d/radial/Makefile.am
 include applications/amrclaw/burgers/2d/pwconst/Makefile.am
 include applications/amrclaw/advection/2d/swirl/Makefile.am
 include applications/amrclaw/euler/2d/quadrants/Makefile.am
-# include applications/amrclaw/euler/2d/shockbubble/Makefile.am
+include applications/amrclaw/euler/2d/shockbubble/Makefile.am
 # include applications/amrclaw/shallow/2d/radialdam/Makefile.am
