--- a/applications/amrclaw/shallow/2d/radialdam/fclaw_options.ini
+++ b/applications/amrclaw/shallow/2d/radialdam/fclaw_options.ini
@@ -1,3 +1,12 @@
+[user]
+      g = 1.0
+      x0 = 0.0
+      y0 = 0.0
+      r0 = 0.5
+      hin = 2.0
+      hout = 1.0
+
+
 [Options]
 
 # Grids
@@ -7,8 +16,10 @@
 
 # Regridding information
      minlevel = 1               # Minimum level
-     maxlevel = 4               # Maximum levels of refinement
+     maxlevel = 5               # Maximum levels of refinement
      regrid_interval = 1        # Regrid every 'regrid_interval' time steps.
+     refine_threshold = 0.25
+     coarsen_threshold = 0.02
 
 # Time stepping
      tfinal = 1.5
