(radialdam) Fix to 1d reference solution

--- a/applications/amrclaw/shallow/2d/radialdam/1drad/Makefile
+++ b/applications/amrclaw/shallow/2d/radialdam/1drad/Makefile
@@ -20,7 +20,7 @@ FFLAGS =  -O
 LFLAGS =  -O
 LINK	= gfortran
 
-CLAW = ./
+CLAW = .
 
 OBJECTS = \
   driver.o \
@@ -41,7 +41,7 @@ LIBOBJECTS = \
   $(CLAW)/lib/limiter.o \
   $(CLAW)/lib/philim.o
 
-xclaw: $(OBJECTS)
+xclaw: $(OBJECTS) $(LIBOBJECTS)
 	$(LINK) $(LFLAGS) $(OBJECTS) $(LIBOBJECTS) -o xclaw
 
 ### DO NOT remove this line - make depends on it ###
