--- a/applications/advection/2d/hemisphere/Makefile.am
+++ b/applications/advection/2d/hemisphere/Makefile.am
@@ -9,18 +9,13 @@ applications_advection_2d_hemisphere_hemisphere_SOURCES = \
 	applications/advection/2d/hemisphere/fclaw2d_map_pillowsphere.f \
 	applications/advection/2d/hemisphere/fclaw2d_map_pillowsphere5.f \
 	applications/advection/2d/hemisphere/setprob.f \
-	applications/advection/2d/hemisphere/user_4.6/tag4refinement.f \
-	applications/advection/2d/hemisphere/user_4.6/hemisphere_output.f \
 	applications/advection/2d/hemisphere/user_4.6/rpn2noncons.f \
 	applications/advection/2d/hemisphere/user_4.6/rpt2noncons.f \
-	applications/advection/2d/hemisphere/user_4.6/qinit_manifold.f \
+	applications/advection/2d/hemisphere/user_4.6/qinit.f \
 	applications/advection/2d/hemisphere/user_4.6/setaux_manifold.f
 
 applications_advection_2d_hemisphere_hemisphere_CPPFLAGS = \
         $(AM_CPPFLAGS) $(FCLAW_CLAWPACK46_CPPFLAGS)
-
-# applications_advection_2d_hemisphere_hemisphere_FFLAGS = \
-#	$(AM_FFLAGS)
 
 applications_advection_2d_hemisphere_hemisphere_LDADD = \
         $(FCLAW_CLAWPACK46_LDADD) $(LDADD)
