(filament) Update example

--- a/applications/advection/2d/filament/Makefile.am
+++ b/applications/advection/2d/filament/Makefile.am
@@ -15,13 +15,11 @@ applications_advection_2d_filament_filament_SOURCES = \
 	applications/advection/2d/filament/fclaw2d_map_pillowdisk5.c \
 	applications/advection/2d/filament/psi.f \
 	applications/advection/2d/filament/setprob.f \
-	applications/advection/2d/filament/user_4.6/tag4refinement.f \
-	applications/advection/2d/filament/user_4.6/rpn2noncons.f \
-	applications/advection/2d/filament/user_4.6/rpt2noncons.f \
 	applications/advection/2d/filament/user_4.6/qinit.f \
+	applications/advection/2d/filament/user_4.6/setaux.f \
 	applications/advection/2d/filament/user_4.6/setaux_manifold.f \
-	applications/advection/2d/filament/user_4.6/setaux_nomap.f \
-	applications/advection/2d/filament/user_4.6/filament_output.f
+	applications/advection/2d/filament/user_4.6/rpn2noncons.f \
+	applications/advection/2d/filament/user_4.6/rpt2noncons.f
 
 
 applications_advection_2d_filament_filament_CPPFLAGS = \
