--- a/applications/advection/2d/filament/example3_squareddisk.ini
+++ b/applications/advection/2d/filament/example3_squareddisk.ini
@@ -1,9 +1,8 @@
 [user]
-	example = 3
-	alpha = 0.5
+	example = 3       # Pillow disk
 
 [Options]
-     minlevel = 1         # Minimum level
+     minlevel = 2         # Minimum level
      maxlevel = 4         # Maximum levels of refinement
 
 # Mapping related functions
