--- a/applications/advection/2d/filament/fclaw_options.ini
+++ b/applications/advection/2d/filament/fclaw_options.ini
@@ -3,15 +3,17 @@
 
 [Options]
 # Grid dimensions
-     mx = 16
-     my = 16		# grid dimensions
+     mx = 8
+     my = 8		# grid dimensions
      mbc = 2            # number of ghost cells
 
 
 # Regridding options
-     minlevel = 2         # Minimum level
-     maxlevel = 5         # Maximum levels of refinement
+     minlevel = 0         # Minimum level
+     maxlevel = 4         # Maximum levels of refinement
      regrid_interval = 1  # Regrid every 'regrid_interval' time steps.
+     refine_threshold = 0.25
+     coarsen_threshold = 0.05
 
 # Time stepping
      tfinal = 8.0         #
@@ -39,7 +41,7 @@
      mpi_debug = F
 
 # File and console IO
-     verbosity = production        # verbose
+     verbosity = essential        # verbose
      serialout = T
 
 # mapping functions
