(swirl_mapped) Update example

--- a/applications/advection/2d/swirl_mapped/fclaw_options.ini
+++ b/applications/advection/2d/swirl_mapped/fclaw_options.ini
@@ -1,5 +1,6 @@
 [user]
-    example = 1          # ID mapping in unit square [0,1],[0,1]
+    example = 0          # No mapping
+    tperiod = 8
 
 [Options]
 
@@ -42,12 +43,12 @@
      serialout = T        # ascii output
 
 # Mapping and topology (id mapping in unit square)
-     manifold = T         # Manifold
+     manifold = F         # Manifold
 
 [clawpack46]
      order  = 2 2         # normal and transverse order
-     mcapa = 3            # mcapa
-     maux = 3             # maux
+     mcapa = 0            # mcapa
+     maux = 2             # maux
      src_term = 0         # src_term
 
      mwaves = 1           # mwaves
