--- a/applications/advection/2d/swirl_mapped/Makefile.am
+++ b/applications/advection/2d/swirl_mapped/Makefile.am
@@ -8,7 +8,7 @@ bin_PROGRAMS += applications/advection/2d/swirl_mapped/swirl
 applications_advection_2d_swirl_mapped_swirl_SOURCES = \
 	applications/advection/2d/swirl_mapped/swirl_user.cpp \
 	applications/advection/2d/swirl_mapped/swirl.cpp \
-	applications/advection/2d/swirl_mapped/mapc2m.f \
+	applications/advection/2d/swirl_mapped/fclaw2d_map_nomap.c \
 	applications/advection/2d/swirl_mapped/fclaw2d_map_cart.c \
 	applications/advection/2d/swirl_mapped/fclaw2d_map_identity.c \
 	applications/advection/2d/swirl_mapped/fclaw2d_map_fivepatch.c \
@@ -17,6 +17,7 @@ applications_advection_2d_swirl_mapped_swirl_SOURCES = \
 	applications/advection/2d/swirl_mapped/user_4.6/setaux_manifold.f \
 	applications/advection/2d/swirl_mapped/user_4.6/b4step2_manifold.f \
 	applications/advection/2d/swirl_mapped/user_4.6/qinit.f \
+	applications/advection/2d/swirl_mapped/user_4.6/setaux.f \
 	applications/advection/2d/swirl_mapped/user_4.6/rpn2ad1.f \
 	applications/advection/2d/swirl_mapped/user_4.6/rpt2ad1.f
 
