--- a/applications/advection/2d/swirl_mapped/example1_identity.ini
+++ b/applications/advection/2d/swirl_mapped/example1_identity.ini
@@ -1,5 +1,4 @@
 # Identity mapping [0,1]x[0,1]
-
 [user]
     example = 1
 
@@ -11,3 +10,7 @@
 
      scale = 1 1 1
      shift = 0 0 0
+
+[clawpack46]
+     maux = 3
+     mcapa = 3
