--- a/applications/advection/2d/swirl_mapped/example2_cart.ini
+++ b/applications/advection/2d/swirl_mapped/example2_cart.ini
@@ -8,9 +8,14 @@
 
 
 # Brick dimensions
+    manifold = T
     mi = 4
     mj = 4
 
 # map [-1,1]x[-1,1] to [0,1]x[0,1]
     scale = 0.5 0.5 1
     shift = 0.5 0.5 0
+
+[clawpack46]
+    maux=3
+    mcapa = 3
