--- a/applications/advection/2d/swirl_mapped/example3_fivepatch.ini
+++ b/applications/advection/2d/swirl_mapped/example3_fivepatch.ini
@@ -5,8 +5,16 @@
 [Options]
 # Nothing to overwrite - options are the same as fclaw_options.ini
 
-  minlevel = 0
-  maxlevel = 3
+  mx = 8
+  my = 8
 
+  minlevel = 0
+  maxlevel = 5
+
+  manifold = T
   scale = 0.5 0.5 1
   shift = 0.5 0.5 0
+
+[clawpack46]
+   maux = 3
+   mcapa = 3
