(metric) Add outstyle 0; updated example

--- a/applications/metric/2d/all_mappings/fclaw_options.ini
+++ b/applications/metric/2d/all_mappings/fclaw_options.ini
@@ -6,6 +6,8 @@
      mx = 32 		  # mx_leaf
      my = 32              # my_leaf
 
+     outstyle = 0         # Initialize grid, output frame 0 and exit.
+
      serialout = T
      run_diagnostics = T
 
