--- a/applications/NCAR_transport/slotted_disk/fclaw_options.ini
+++ b/applications/NCAR_transport/slotted_disk/fclaw_options.ini
@@ -12,9 +12,11 @@
      meqn = 1             # meqn
 
 # Refinement
-     minlevel = 2         # Minimum level
-     maxlevel = 5         # Maximum levels of refinement
+     minlevel = 0         # Minimum level
+     maxlevel = 3         # Maximum levels of refinement
      regrid_interval = 1  # Regrid every 'regrid_interval' time steps.
+     refine_threshold = 0.25
+     coarsen_threshold = 0.05
 
 # Time stepping
      tfinal = 5.0         #
@@ -30,7 +32,7 @@
      subcycle = T         # subcycle in time ( = T or F).
 
 # Console and file IO
-     verbosity = production        # verbose
+     verbosity = essential        # verbose
      serialout = T        # Set this to F for parallel runs.  T is dead slow.
 
 # Debugging adn diagnostics
