--- a/applications/euler/2d/quadrants/fclaw_options.ini
+++ b/applications/euler/2d/quadrants/fclaw_options.ini
@@ -1,5 +1,5 @@
 [user]
-    example = 0   # Five patch square
+    example = 0   # No mapping
 
 [Options]
 
@@ -12,6 +12,8 @@
      minlevel = 2               # Minimum level
      maxlevel = 5               # Maximum levels of refinement
      regrid_interval = 1        # Regrid every 'regrid_interval' time steps.
+     refine_threshold = 0.25
+     coarsen_threshold = 0.025
 
 # Time stepping
      tfinal = 0.8
