--- a/applications/NCAR_transport/correlatedcb/fclaw_options.ini
+++ b/applications/NCAR_transport/correlatedcb/fclaw_options.ini
@@ -1,5 +1,6 @@
 [user]
      example = 2          # 1 = pillowsphere;  2 = cubed_sphere
+     init_choice = 3
 
 [Options]
 
@@ -13,8 +14,10 @@
 
 # Refinement
      minlevel = 2         # Minimum level
-     maxlevel = 5         # Maximum levels of refinement
+     maxlevel = 4         # Maximum levels of refinement
      regrid_interval = 1  # Regrid every 'regrid_interval' time steps.
+     refine_threshold = 0.1
+     coarsen_threshold = 0.01
 
 # Time stepping
      tfinal = 5.0         #
