--- a/applications/amrclaw/acoustics/2d/interface/Makefile.am
+++ b/applications/amrclaw/acoustics/2d/interface/Makefile.am
@@ -12,11 +12,10 @@ applications_amrclaw_acoustics_2d_interface_interface_SOURCES = \
 	applications/amrclaw/acoustics/2d/interface/fclaw2d_map_nomap.c \
 	applications/amrclaw/acoustics/2d/interface/setprob.f \
 	applications/amrclaw/acoustics/2d/interface/user_4.x/setaux.f \
+	applications/amrclaw/acoustics/2d/interface/user_4.x/qinit.f \
 	applications/amrclaw/acoustics/2d/interface/user_4.x/tag4refinement.f \
-	applications/amrclaw/acoustics/2d/interface/user_4.x/interface_output.f \
 	applications/amrclaw/acoustics/2d/rp/rpn2acv.f \
-	applications/amrclaw/acoustics/2d/rp/rpt2acv.f \
-	applications/amrclaw/acoustics/2d/interface/user_4.x/qinit.f
+	applications/amrclaw/acoustics/2d/rp/rpt2acv.f
 
 
 applications_amrclaw_acoustics_2d_interface_interface_CPPFLAGS = \
