--- a/applications/amrclaw/euler/2d/shockbubble/fclaw_options.ini
+++ b/applications/amrclaw/euler/2d/shockbubble/fclaw_options.ini
@@ -9,19 +9,19 @@
 [Options]
 
 # Grids
-     mx = 20
-     my = 20
+     mx = 10
+     my = 10
      mbc = 2
 
 # Regridding information
      minlevel = 0               # Minimum level
-     maxlevel = 5               # Maximum levels of refinement
+     maxlevel = 4               # Maximum levels of refinement
      regrid_interval = 1        # Regrid every 'regrid_interval' time steps.
-     refine_threshold = 0.25
-     coarsen_threshold = 0.15
+     refine_threshold = 0.5
+     coarsen_threshold = 0.20
 
 # Time stepping
-     tfinal = 1.5
+     tfinal = 1.5          # Since we are not scaling the results
      initial_dt = 1.5e-3          # Initial time step for 'minlevel'
 
      use_fixed_dt = F            # Take a fixed time step
@@ -29,14 +29,14 @@
      desired_cfl = 0.9
 
      outstyle = 1                # OutputStyle = 1,2,3 (see below, e.g. [OutputStyle_1]
-     nout = 30                    # Used for all three out styles
+     nout = 10                    # Used for all three out styles
      nstep = 1                   # Only used if outstyle is 3
 
      subcycle = T                # subcycle in time ( = T or F).
 
 
 # File and console IO
-     verbosity = production      # verbose
+     verbosity = essential      # verbose
      serialout = T               # ascii output
 
 # Debugging and diagnostics
