(clawpack46) Add 'set_capacity' function for update capacity function in aux array

--- a/src/solvers/fc2d_clawpack4.6/Makefile.am
+++ b/src/solvers/fc2d_clawpack4.6/Makefile.am
@@ -8,6 +8,7 @@ libclawpack4_6_compiled_sources = \
 	src/solvers/fc2d_clawpack4.6/fc2d_clawpack46_options.c \
 	src/solvers/fc2d_clawpack4.6/fortran_source/clawpack46_inlinelimiter.f \
 	src/solvers/fc2d_clawpack4.6/fortran_source/clawpack46_limiter.f \
+	src/solvers/fc2d_clawpack4.6/fortran_source/clawpack46_set_capacity.f \
 	src/solvers/fc2d_clawpack4.6/fortran_source/clawpack46_block.f \
 	src/solvers/fc2d_clawpack4.6/fortran_source/clawpack46_bc2.f \
 	src/solvers/fc2d_clawpack4.6/fortran_source/clawpack46_flux2.f \
